# gcal

./: AUTHORS  Makefile.am  NEWS  README  TODO  bootstrap.conf  configure.ac
.forgejo/workflows/: testing.yaml
doc/de/texi/: gcal.texi
doc/en/: gcal.texi
po/: POTFILES.in
src/: Makefile.am  common.h  file-io.c  gcal.c  gcal2txt.c  global-variables.h  hd-astro.c  hd-data.c  hd-data1.c  hd-data2.c  hd-data3.c  hd-data4.c  hd-data5.c  hd-defs.h  hd-use.c  hd-use.h  help.c  print.c  rc-astro.c  rc-check.c  rc-insert.c  rc-use.c  rc-utils.c  tailor.h  tcal.c  tty.c  txt2gcal.c  utils.c
tests/: Makefile.am  TODO  check_file-io.c  check_gcal.c  check_gcal2txt.c  check_gcal_file-io.c  check_hd-astro.c  check_hd-data.c  check_hd-use.c  check_help.c  check_print.c  check_rc-astro.c  check_rc-check.c  check_rc-insert.c  check_rc-use.c  check_rc-utils.c  check_tcal.c  check_tty.c  check_txt2gcal.c  check_utils.c  template
